bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxGeoset whiteout_MdxGeoset;
typedef struct whiteout_MdxGeosetAnimation whiteout_MdxGeosetAnimation;
typedef struct whiteout_MdxBone whiteout_MdxBone;
typedef struct whiteout_MdxLight whiteout_MdxLight;
typedef struct whiteout_MdxHelper whiteout_MdxHelper;
typedef struct whiteout_MdxAttachment whiteout_MdxAttachment;
typedef struct whiteout_MdxParticleEmitter whiteout_MdxParticleEmitter;
typedef struct whiteout_MdxParticleEmitter2 whiteout_MdxParticleEmitter2;
/* Tangent vectors (for normal mapping) */
size_t whiteout_mdx_MdxGeoset_get_tangents_count(const whiteout_MdxGeoset* self);
const float* whiteout_mdx_MdxGeoset_get_tangents_data(const whiteout_MdxGeoset* self);
/* ── MdxGeosetAnimation ─────────────────────────────────────────────── */

/* Geoset visibility and color animation */
/*  */
/* Geoset animations control the visibility and color tinting of meshes. */
whiteout_MdxGeosetAnimation* whiteout_mdx_MdxGeosetAnimation_new(void);
void whiteout_mdx_MdxGeosetAnimation_delete(whiteout_MdxGeosetAnimation* self);
/* Base alpha value */
float whiteout_mdx_MdxGeosetAnimation_get_alpha(const whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_alpha(whiteout_MdxGeosetAnimation* self, float value);
/* Animation flags */
int32_t whiteout_mdx_MdxGeosetAnimation_get_flags(const whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_flags(whiteout_MdxGeosetAnimation* self, int32_t value);
/* Base color tint */
whiteout_Vector3f* whiteout_mdx_MdxGeosetAnimation_get_color(whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_color(whiteout_MdxGeosetAnimation* self, const whiteout_Vector3f* value);
/* Target geoset index */
uint32_t whiteout_mdx_MdxGeosetAnimation_get_geosetId(const whiteout_MdxGeosetAnimation* self);
void whiteout_mdx_MdxGeosetAnimation_set_geosetId(whiteout_MdxGeosetAnimation* self, uint32_t value);
/* ── MdxBone ─────────────────────────────────────────────── */

/* Skeleton bone for skinned animation */
/*  */
/* Bones  form the skeleton that deforms mesh geometry. Each bone is a node in the hierarchy and can affect one or more geosets. */
whiteout_MdxBone* whiteout_mdx_MdxBone_new(void);
void whiteout_mdx_MdxBone_delete(whiteout_MdxBone* self);
/* Geoset this bone affects */
uint32_t whiteout_mdx_MdxBone_get_geosetId(const whiteout_MdxBone* self);
void whiteout_mdx_MdxBone_set_geosetId(whiteout_MdxBone* self, uint32_t value);
/* Geoset animation index */
uint32_t whiteout_mdx_MdxBone_get_geosetAnimationId(const whiteout_MdxBone* self);
void whiteout_mdx_MdxBone_set_geosetAnimationId(whiteout_MdxBone* self, uint32_t value);
/* ── MdxLight ─────────────────────────────────────────────── */

/* Light source */
/*  */
/* Lights can be attached to bones to move with animations. They affect how the model is rendered in the game engine. */
whiteout_MdxLight* whiteout_mdx_MdxLight_new(void);
void whiteout_mdx_MdxLight_delete(whiteout_MdxLight* self);
/* Type of light */
int32_t whiteout_mdx_MdxLight_get_type(const whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_type(whiteout_MdxLight* self, int32_t value);
/* Distance where attenuation begins */
float whiteout_mdx_MdxLight_get_attenuationStart(const whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_attenuationStart(whiteout_MdxLight* self, float value);
/* Distance where light reaches zero */
float whiteout_mdx_MdxLight_get_attenuationEnd(const whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_attenuationEnd(whiteout_MdxLight* self, float value);
/* Light color (RGB) */
whiteout_Vector3f* whiteout_mdx_MdxLight_get_color(whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_color(whiteout_MdxLight* self, const whiteout_Vector3f* value);
/* Light intensity */
float whiteout_mdx_MdxLight_get_intensity(const whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_intensity(whiteout_MdxLight* self, float value);
/* Ambient light color */
whiteout_Vector3f* whiteout_mdx_MdxLight_get_ambientColor(whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_ambientColor(whiteout_MdxLight* self, const whiteout_Vector3f* value);
/* Ambient intensity */
float whiteout_mdx_MdxLight_get_ambientIntensity(const whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_ambientIntensity(whiteout_MdxLight* self, float value);
/* Shadow darkness (Reforged) */
float whiteout_mdx_MdxLight_get_shadowIntensity(const whiteout_MdxLight* self);
void whiteout_mdx_MdxLight_set_shadowIntensity(whiteout_MdxLight* self, float value);
/* ── MdxHelper ─────────────────────────────────────────────── */

/* Helper node (attachment point) */
/*  */
/* Helpers are simple nodes used as attachment points for effects, weapons, or other objects. They don't render anything themselves. */
whiteout_MdxHelper* whiteout_mdx_MdxHelper_new(void);
void whiteout_mdx_MdxHelper_delete(whiteout_MdxHelper* self);
/* ── MdxAttachment ─────────────────────────────────────────────── */

/* Attachment point for external models */
/*  */
/* Attachments define points where other models (like weapons or shields) can be attached to this model. */
whiteout_MdxAttachment* whiteout_mdx_MdxAttachment_new(void);
void whiteout_mdx_MdxAttachment_delete(whiteout_MdxAttachment* self);
/* Path to attached model */
whiteout_CString whiteout_mdx_MdxAttachment_get_path(const whiteout_MdxAttachment* self);
void whiteout_mdx_MdxAttachment_set_path(whiteout_MdxAttachment* self, const char* value);
/* Attachment slot ID */
uint32_t whiteout_mdx_MdxAttachment_get_attachmentId(const whiteout_MdxAttachment* self);
void whiteout_mdx_MdxAttachment_set_attachmentId(whiteout_MdxAttachment* self, uint32_t value);
/* ── MdxParticleEmitter ─────────────────────────────────────────────── */

/* Particle emitter version 1 (uses external model) */
/*  */
/* Legacy particle emitter that spawns copies of an external model file. Used for effects like footprints, blood splatter, etc. */
whiteout_MdxParticleEmitter* whiteout_mdx_MdxParticleEmitter_new(void);
void whiteout_mdx_MdxParticleEmitter_delete(whiteout_MdxParticleEmitter* self);
/* Particles per second */
float whiteout_mdx_MdxParticleEmitter_get_emissionRate(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_emissionRate(whiteout_MdxParticleEmitter* self, float value);
/* Gravity force */
float whiteout_mdx_MdxParticleEmitter_get_gravity(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_gravity(whiteout_MdxParticleEmitter* self, float value);
/* Emission longitude angle */
float whiteout_mdx_MdxParticleEmitter_get_longitude(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_longitude(whiteout_MdxParticleEmitter* self, float value);
/* Emission latitude angle */
float whiteout_mdx_MdxParticleEmitter_get_latitude(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_latitude(whiteout_MdxParticleEmitter* self, float value);
/* Model to spawn as particles */
whiteout_CString whiteout_mdx_MdxParticleEmitter_get_spawnModelFileName(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_spawnModelFileName(whiteout_MdxParticleEmitter* self, const char* value);
/* Particle lifetime in seconds */
float whiteout_mdx_MdxParticleEmitter_get_lifespan(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_lifespan(whiteout_MdxParticleEmitter* self, float value);
/* Initial particle speed */
float whiteout_mdx_MdxParticleEmitter_get_initialVelocity(const whiteout_MdxParticleEmitter* self);
void whiteout_mdx_MdxParticleEmitter_set_initialVelocity(whiteout_MdxParticleEmitter* self, float value);
/* ── MdxParticleEmitter2 ─────────────────────────────────────────────── */

/* Particle emitter version 2 (sprite-based) */
/*  */
/* More advanced particle system that uses sprite textures. Supports various particle shapes, blending modes, and animation over the particle lifetime. Used for fire, smoke, magic effects, etc. */
whiteout_MdxParticleEmitter2* whiteout_mdx_MdxParticleEmitter2_new(void);
void whiteout_mdx_MdxParticleEmitter2_delete(whiteout_MdxParticleEmitter2* self);
/* Particle speed */
float whiteout_mdx_MdxParticleEmitter2_get_speed(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_speed(whiteout_MdxParticleEmitter2* self, float value);
/* Speed variation (randomness) */
float whiteout_mdx_MdxParticleEmitter2_get_variation(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_variation(whiteout_MdxParticleEmitter2* self, float value);
/* Emission cone latitude */
float whiteout_mdx_MdxParticleEmitter2_get_latitude(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_latitude(whiteout_MdxParticleEmitter2* self, float value);
/* Gravity acceleration */
float whiteout_mdx_MdxParticleEmitter2_get_gravity(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_gravity(whiteout_MdxParticleEmitter2* self, float value);
/* Particle lifetime in seconds */
float whiteout_mdx_MdxParticleEmitter2_get_lifespan(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_lifespan(whiteout_MdxParticleEmitter2* self, float value);
/* Particles per second */
float whiteout_mdx_MdxParticleEmitter2_get_emissionRate(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_emissionRate(whiteout_MdxParticleEmitter2* self, float value);
/* Particle length (for tail effect) */
float whiteout_mdx_MdxParticleEmitter2_get_length(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_length(whiteout_MdxParticleEmitter2* self, float value);
/* Particle width */
float whiteout_mdx_MdxParticleEmitter2_get_width(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_width(whiteout_MdxParticleEmitter2* self, float value);
/* Blending mode */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_filterMode(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_filterMode(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* Texture atlas rows */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_rows(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_rows(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* Texture atlas columns */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_columns(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_columns(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* Head/tail flags */
uint32_t whiteout_mdx_MdxParticleEmitter2_get_headOrTail(const whiteout_MdxParticleEmitter2* self);
void whiteout_mdx_MdxParticleEmitter2_set_headOrTail(whiteout_MdxParticleEmitter2* self, uint32_t value);
/* Tail particle length */
float whiteout_mdx_MdxParticleEmitter2_get_tailLength(const whiteout_MdxParticleEmitter2* self);