bindings/csharp/Whiteout/Mdx/NativeMethods.Mdx.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxGeoset_get_tangents_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeoset_get_tangents_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeosetAnimation_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeosetAnimation_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxGeosetAnimation_get_alpha(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeosetAnimation_set_alpha(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxGeosetAnimation_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeosetAnimation_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeosetAnimation_get_color(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeosetAnimation_set_color(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxGeosetAnimation_get_geosetId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeosetAnimation_set_geosetId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxBone_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxBone_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxBone_get_geosetId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxBone_set_geosetId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxBone_get_geosetAnimationId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxBone_set_geosetAnimationId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLight_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxLight_get_type(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_type(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLight_get_attenuationStart(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_attenuationStart(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLight_get_attenuationEnd(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_attenuationEnd(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLight_get_color(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_color(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLight_get_intensity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_intensity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLight_get_ambientColor(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_ambientColor(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLight_get_ambientIntensity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_ambientIntensity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLight_get_shadowIntensity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLight_set_shadowIntensity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxHelper_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxHelper_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxAttachment_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxAttachment_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxAttachment_get_path(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxAttachment_set_path(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxAttachment_get_attachmentId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxAttachment_set_attachmentId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxParticleEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter_get_emissionRate(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_emissionRate(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter_get_gravity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_gravity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter_get_longitude(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_longitude(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter_get_latitude(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_latitude(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxParticleEmitter_get_spawnModelFileName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_spawnModelFileName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter_get_lifespan(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_lifespan(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter_get_initialVelocity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter_set_initialVelocity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxParticleEmitter2_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_speed(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_speed(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_variation(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_variation(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_latitude(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_latitude(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_gravity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_gravity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_lifespan(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_lifespan(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_emissionRate(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_emissionRate(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_length(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_length(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_width(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_width(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_filterMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_filterMode(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_rows(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_rows(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_columns(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_columns(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxParticleEmitter2_get_headOrTail(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxParticleEmitter2_set_headOrTail(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxParticleEmitter2_get_tailLength(IntPtr self);
